# CMake_Linux_Learning

./: .gitignore  README.md
02_多个源文件/: CMakeLists.txt
03_简单项目结构/: CMakeLists.txt
04_不同目录下有多个源文件/: CMakeLists.txt
05_项目级的组织结构/src/: CMakeLists.txt
07_测试库/: CMakeLists.txt
08_添加编译选项/: main.c
09_生成部分指定 bin 或库文件/: CMakeLists.txt
09_生成部分指定 bin 或库文件/src/: CMakeLists.txt  main1.c  main2.c
Example/05_项目级的组织结构/: CMakeLists.txt  README.md
Example/06_动态库和静态库的编译控制/: CMakeLists.txt
Example/07_测试库/: CMakeLists.txt
Example/07_测试库/src/: main.c
Example/08_添加编译选项/: CMakeLists.txt
Example/09_生成部分指定 bin 或库文件/: README.md
Tutorial/Step_01/: CMakeLists.txt  README.md  tutorial.cxx
Tutorial/Step_02_指定C++标准/: CMakeLists.txt  README.md  tutorial.cxx
Tutorial/Step_03_Cpp与CMake数据互通/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
Tutorial/Step_04_生成与添加链接库/: CMakeLists.txt  README.md  TutorialConfig.h.in
Tutorial/Step_04_生成与添加链接库/MathFunctions/: mysqrt.cxx
Tutorial/Step_05_cmakedefine 和 define 的区别/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
Tutorial/Step_05_cmakedefine 和 define 的区别/MathFunctions/: CMakeLists.txt
Tutorial/Step_06_链接库设为可选/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Tutorial/Step_07_为生成的库添加使用依赖/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
Tutorial/Step_07_为生成的库添加使用依赖/MathFunctions/: CMakeLists.txt
Tutorial/Step_08_用接口库设置C++标准/: CMakeLists.txt  README.md
Tutorial/Step_08_用接口库设置C++标准/MathFunctions/: CMakeLists.txt
Tutorial/Step_09_生成器表达式/: CMakeLists.txt  README.md  tutorial.cxx
Tutorial/Step_09_生成器表达式/MathFunctions/: CMakeLists.txt
Tutorial/Step_10_安装目标文件到指定目录/: CMakeLists.txt  README.md  tutorial.cxx
Tutorial/Step_10_安装目标文件到指定目录/MathFunctions/: CMakeLists.txt
Tutorial/Step_10_安装目标文件到指定目录/include/: TutorialConfig.h
Tutorial/Step_11_添加测试/: CMakeLists.txt  README.md  TutorialConfig.h.in
Tutorial/Step_11_添加测试/MathFunctions/: CMakeLists.txt
